Added the KCsmart comparative component allowing the direct comparison of the aCGH data from two classes, see the documentation for more details. It is now possible to plot multiple sample point matrices in one figure. The findPeaks algorithm has been optimized, resulting in much faster calculations in order to find the significance threshold (used by findSigLevelTrad and findSigLevelFdr).
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/KCsmart@38551 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,5 @@
-importFrom(graphics, plot)
+importFrom(multtest, plot)
 importFrom(utils, write.table)
-exportClasses(samplePointMatrix, sigSegments)
+exportClasses(samplePointMatrix, sigSegments, spmCollection, compKc, compKcSigRegions)
 exportMethods(plot, write.table, initialize, show, "[[", "[", "[[<-")
-export("calcSpm", "getSigSegments", "findSigLevelTrad", "findSigLevelFdr", "plotScaleSpace", "idPoints")
+export("calcSpm", "calcSpmCollection", "getSigSegments", "findSigLevelTrad", "findSigLevelFdr", "plotScaleSpace", "idPoints","compareSpmCollection","getSigRegionsCompKC")
