--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: KCsmart
 Type: Package
 Title: Multi sample aCGH analysis package using kernel convolution
-Version: 1.7.4
-Date: 2009-01-12
-Author: Jorma de Ronde, Christiaan Klijn
+Version: 2.0.0
+Date: 2009-03-26
+Author: Jorma de Ronde, Christiaan Klijn, Arno Velds
 Maintainer: Jorma de Ronde <j.d.ronde@nki.nl>
 Description: Multi sample aCGH analysis package using kernel convolution
 License: GPL-3
-Depends: methods
+Depends: methods, siggenes, multtest
 Enhances: Biobase, CGHbase
 Collate: 'AllClasses.R' 'access-methods.R' 'length-methods.R' 'plot-methods.R' 'show-methods.R' 'sort-methods.R' 'unlist-methods.R' 'write.table-methods.R' 'KC.R'
 LazyLoad: yes
 biocViews: Visualization, DNACopyNumber, Microarray
+Packaged: Fri Apr  3 10:47:37 2009; avelds
