Changed biocViews DNACopyNumber to CopyNumberVariants and  SNPsAndGeneticVariability to  SNP, GeneticVariability.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/KCsmart@40630 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,4 @@ Depends: methods, siggenes, multtest
 Enhances: Biobase, CGHbase
 Collate: 'AllClasses.R' 'access-methods.R' 'length-methods.R' 'plot-methods.R' 'show-methods.R' 'sort-methods.R' 'unlist-methods.R' 'write.table-methods.R' 'KC.R'
 LazyLoad: yes
-biocViews: Visualization, DNACopyNumber, Microarray
-Packaged: Fri Apr  3 10:47:37 2009; avelds
+biocViews: Visualization, CopyNumberVariants, Microarray
