--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: KCsmart
 Type: Package
 Title: Multi sample aCGH analysis package using kernel convolution
-Version: 2.2.0
-Date: 2009-03-26
+Version: 2.3.2
+Date: 2009-07-28
 Author: Jorma de Ronde, Christiaan Klijn, Arno Velds
 Maintainer: Jorma de Ronde <j.d.ronde@nki.nl>
 Description: Multi sample aCGH analysis package using kernel convolution
@@ -11,5 +11,4 @@ Depends: methods, siggenes, multtest
 Enhances: Biobase, CGHbase
 Collate: 'AllClasses.R' 'access-methods.R' 'length-methods.R' 'plot-methods.R' 'show-methods.R' 'sort-methods.R' 'unlist-methods.R' 'write.table-methods.R' 'KC.R'
 LazyLoad: yes
-biocViews: Visualization, DNACopyNumber, Microarray
-Packaged: Fri Apr  3 10:47:37 2009; avelds
+biocViews: Visualization, CopyNumberVariants, Microarray
