import summary and plot _methods_ from multtest
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/KCsmart@63409 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-importFrom(multtest, plot)
+importMethodsFrom(multtest, plot, summary)
 importFrom(utils, write.table)
 exportClasses(samplePointMatrix, sigSegments, spmCollection, compKc, compKcSigRegions)
 exportMethods(plot, write.table, initialize, show, "[[", "[", "[[<-")
