--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,5 @@
+import(methods)
+importFrom(BiocGenerics, sort, unlist)
 importMethodsFrom(multtest, plot, summary)
 importFrom(utils, write.table)
 exportClasses(samplePointMatrix, sigSegments, spmCollection, compKc, compKcSigRegions)
